--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample-express",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.1",
     "dotenv": "^2.0.0",
     "express": "^4.0.0"
   }
